# toy-project-uv

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  testing.db
src/: Dockerfile  docker-compose.yml
src/toy_project/: db.py  main.py
src/toy_project/controller/: product.py
src/toy_project/dependencies/: product.py
src/toy_project/models/: product.py
src/toy_project/routers/: routers.py
src/toy_project/services/: product.py
tests/toy_project/: conftest.py  test_integration.py
